[Basic-benchmark] Added pprof server and metrics to get information about server executions
